<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/view_set_alarm_notification_methods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/delivery_methods"
            android:textColor="@color/darkText"
            android:layout_alignParentStart="true"/>

    <TextView
            android:id="@+id/view_set_alarm_notification_methods_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_methods_placeholder"
            android:layout_below="@id/view_set_alarm_notification_methods"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"/>

    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_settings"
            android:layout_alignParentEnd="true"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/view_set_alarm_notification_methods_list"
            android:layoutDirection="locale">

        <Button
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight=".5"
                android:text="@string/apply_now"
                style="@style/AppButton"
                android:layout_marginEnd="8dp"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:text="@string/not_now"
                android:layout_weight=".5"
                style="@style/AppButton"/>
    </LinearLayout>
</RelativeLayout>